main/default/objects/Release__c/fields/Permission_Sets_and_Profile_Updates__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets_and_Profile_Updates__c</fullName>
    <label>Permission Sets and Profile Updates</label>
    <type>Url</type>
</CustomField>