main/default/objects/Release__c/fields/Source_Organization__c.field-meta.xml
<CustomField>
    <fullName>Source_Organization__c</fullName>
    <label>Source Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organization</valueSetName>
    </valueSet>
</CustomField>