main/default/objects/Release__c/listViews/All_Open_Releases.listView-meta.xml
<ListView>
    <fullName>All_Open_Releases</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Release_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Release_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Withdrawn</value>
    </filters>
    <label>All Open Releases</label>
</ListView>