main/default/objects/Release__c/listViews/Compass_Agile_PM.listView-meta.xml
<ListView>
    <fullName>Compass_Agile_PM</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Release_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>agile</value>
    </filters>
    <label>Compass Agile PM</label>
</ListView>