main/default/objects/Release__c/listViews/Compass_Change_Navigator.listView-meta.xml
<ListView>
    <fullName>Compass_Change_Navigator</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Release_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>navigator</value>
    </filters>
    <label>Compass Change Navigator</label>
</ListView>