main/default/objects/Release__c/listViews/Compass_Connect.listView-meta.xml
<ListView>
    <fullName>Compass_Connect</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Release_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>connect</value>
    </filters>
    <filters>
        <field>Release_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>3/1/2023</value>
    </filters>
    <label>Compass Connect</label>
</ListView>